# hessband

./: CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  docs.yml  python-ci.yml  python-publish.yml
docs/: api.rst  conf.py  examples.rst  index.rst
docs/api/: cv.rst  index.rst  kde.rst  kernels.rst  selectors.rst
docs/examples/: nw_regression.ipynb
docs/source/: conf.py  hessband.rst  index.rst  modules.rst
hessband/: README.md  __init__.py  cv.py  kde.py  kernels.py  selectors.py
tests/: test_cv.py  test_kde.py  test_kde_lscv.py  test_kde_lscv_grad_hess.py  test_kernels.py  test_kernels_ddh.py  test_nw.py
