[project]
name = "hessband"
version = "0.1.2"
description = "Analytic-Hessian bandwidth selection for univariate kernel regression"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Gaurav Sood", email = "gsood07@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "bandwidth",
    "kernel", 
    "regression",
    "density-estimation",
    "cross-validation",
    "statistics",
    "smoothing",
    "nadaraya-watson",
    "kde"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scikit-learn",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/finite-sample/hessband"
Repository = "https://github.com/finite-sample/hessband"
Documentation = "https://finite-sample.github.io/hessband/"
Issues = "https://github.com/finite-sample/hessband/issues"
Changelog = "https://github.com/finite-sample/hessband/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hessband*"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.black]
line-length = 88
