[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "hessband"
version = "0.1.2"
description = "Analytic-Hessian bandwidth selection for univariate kernel regression"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Gaurav Sood", email = "gsood07@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "bandwidth",
    "kernel",
    "regression",
    "density-estimation",
    "cross-validation",
    "statistics",
    "smoothing",
    "nadaraya-watson",
    "kde",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pyproject-flake8",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/finite-sample/hessband"
Repository = "https://github.com/finite-sample/hessband"
Documentation = "https://finite-sample.github.io/hessband/"
Issues = "https://github.com/finite-sample/hessband/issues"
Changelog = "https://github.com/finite-sample/hessband/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["hessband"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.7.0", "mypy>=1.0", "pre-commit>=3.0"]
test = ["pytest>=7.0"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]

[tool.black]
line-length = 88

[tool.hatch.build.targets.wheel]
packages = ["hessband"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.7.0", "mypy>=1.0"]
test = ["pytest>=7.0"]
